preview-ns/staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-dashboard-staging

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-dashboard-staging
  template:
    metadata:
      labels:
        app: ns-dashboard-staging
    spec:
      enableServiceLinks: false

      containers:
        - name: ns-dashboard
          image: ghcr.io/traptitech/ns-dashboard:main@sha256:a50f8f2c96e2f076fd38f7020ec206ba372668f19b3ea2152336cc459a549882
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
