preview-ns/staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-dashboard-staging

spec:
  type: ClusterIP
  selector:
    app: ns-dashboard-staging
  ports:
    - port: 80
      targetPort: http
      name: http
