preview-ns/staging-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ns-preview-staging

spec:
  entryPoints:
    - websecure
  tls:
    secretName: preview-ns-tls
  routes:
    - kind: Rule
      match: Host(`staging.ns-preview.trapti.tech`)
      priority: -100
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: preview-ns
          kind: Service
          name: ns-dashboard-staging
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`staging.ns-preview.trapti.tech`) && PathPrefix(`/neoshowcase.protobuf.APIService`)
      priority: -99
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: ns-system
          kind: Service
          # point to prod
          name: ns-gateway
          port: http
          scheme: h2c
          strategy: RoundRobin
          weight: 1
